--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
                 });
 
                 if(!walletReq.ok) {
-                    document.getElementById('status').innerText = "Errore: Wallet non trovato."; 
+                    document.getElementById('status').innerText = "Errore: utente non trovato."; 
                     document.getElementById('status').style.color = "red";
                     return;
                 }
